# picleo

./: CHANGELOG.md  Cargo.toml  README.md  shell.nix
design-docs/: TODO.md  autocomplete.md  preview-command.md
src/: app.rs  config.rs  editing_mode.rs  lib.rs  main.rs  picker.rs  requested_items.rs  search_mode.rs  selectable.rs  selected_items.rs  ui.rs
