[package]
name = "picleo"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"                                                                                              # https://spdx.org/licenses/
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A fuzzy picker similar to fzf and Skim using the Nucleo library. Can be used via CLI or as a library."
repository = "https://github.com/symplasma/picleo"
readme = "README.md"
keywords = ["fuzzy", "search", "picker", "menu", "nucleo"]                                                            # free text
categories = ["command-line-utilities"]                                                                               # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider.*"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
nucleo = "0.5.0"
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
