[package]
name = "picleo"
version = "0.1.6"
edition = "2021"
license = "BSD-3-Clause"                                                                                              # https://spdx.org/licenses/
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A fuzzy picker similar to fzf and Skim using the Nucleo library. Can be used via CLI or as a library."
repository = "https://github.com/symplasma/picleo"
readme = "README.md"
keywords = ["fuzzy", "search", "picker", "menu", "nucleo"]                                                            # free text
categories = ["command-line-utilities"]                                                                               # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider.*"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
nucleo = "0.5.0"
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
directories = "5.0"
figment = { version = "0.10", features = ["toml", "json", "yaml", "env"] }
serde = { version = "1.0", features = ["derive"] }
shell-escape = "0.1.5"
comma = "1.0.0"
eunicode = "0.1.4"
ansi-to-tui = "7.0.0"
